修改fig和nginx中hostname配置

--- a/docker-registry/nginx-auth/ba.yml
+++ b/docker-registry/nginx-auth/ba.yml
@@ -1,5 +1,7 @@
 registry:
     image: registry:latest
+    environment:
+        - DOCKER_REGISTRY_CONFIG=/docker-image/registry-config/config.yml
     volumes:
         - /opt/docker-image:/docker-image 
     ports:
